--- a/public/home.html
+++ b/public/home.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script type="module" src="./src/frontend/showUsers.js"></script>
     <link rel="stylesheet" href="styles/stylehome.css">
-    <title>Document</title>
+    <title>Página Principal</title>
 </head>
 <body>
     <header>
+        <h1>Bienvenido a la Página Principal</h1>
         <nav>
-            <button onclick="location.href='home.html'">Inicio</button>
             <button onclick="location.href='newUser.html'">Registrar Usuario</button>
             <button onclick="location.href='newVideo.html'">Subir Video</button>
+            <button onclick="location.href='usersManagement.html'">Gestión de Usuarios</button>
             <button onclick="location.href='updateUser.html'">Actualizar Usuario</button>
         </nav>
     </header>
-    <h1>Usuarios:</h1>
-    <div id="users"></div>
+    <main>
+        <p>Selecciona una opción del menú para continuar.</p>
+    </main>
 </body>
 </html>
