--- a/public/newVideo.html
+++ b/public/newVideo.html
@@ -25,13 +25,14 @@
         <p>
             <label for="description-field">Descripción</label>
             <input type="text" id="description-field" name="description" required>
+            <input type="text" id="user_id-field" name="user_id" value="12" required>
         </p>
         <p>
-            <label for="file-path">Archivo de Video</label>
-            <input type="file" id="file-path" name="videoFile" accept="video/*" required>
+            <label for="videoFile-field">Archivo de Video</label>
+            <input type="file" id="videoFile-field" name="videoFile" accept="video/*" required>
         </p>
         <p>
-            <button type="submit">Subir Video</button>    
+            <input type="submit" value="Subir Video"> 
         </p>
     </form>
 </body>
